--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
 </header>
 <!-- Main info -->
 <div  class="w3-container" id="user">
-    <h2>User</h2>
+    <h2>Settings</h2>
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-light-grey">
