--- a/history.html
+++ b/history.html
@@ -1,1 +1,12 @@
-<h2>History</h2>
+<header class="w3-container" style="padding-top:22px">
+    <h5><b><i class="fa fa-users"></i> Overview</b></h5>
+</header>
+<!-- Main info -->
+<div  class="w3-container" id="user">
+    <h2>History</h2>
+</div>
+<!-- Footer -->
+<footer class="w3-container w3-padding-16 w3-light-grey">
+    <p>Powered by Kapi</a></p>
+</footer>
+<!-- End page content -->
