--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
 <body class="w3-light-grey">
 
+<script>
+    function clearBar() {
+        userBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+        historyBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+        serverBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+        statBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+        settingBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+    }
+</script>
+
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
     <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i
@@ -29,48 +39,94 @@
     </div>
     <div id="asdf" class="w3-bar-block">
         <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
-           onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i> Close Menu</a>
-        <a href="#1" id="11" onclick="userBar(this); return false;"
-           class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i> Overview</a>
-        <a href="#2" id="22" onclick="fortuneFlower(this); return false;" class="w3-bar-item w3-button w3-padding"><i
-                class="fa fa-bullseye fa-fw"></i> Geo</a>
-        <a href="#3" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bank fa-fw"></i> General</a>
-        <a href="#4" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i> History</a>
-        <a href="#5" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>
+           onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i> Close Menu </a>
+        <a href="#1" id="userBar" onclick="userBarClick(this); return false;"
+           class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i> User </a>
+        <a href="#4" id="serverBar" onclick="serverBarClick(this); return false;"
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>
+        <a href="#3" id="statBar" onclick="statBarClick(this); return false;"
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-bar-chart fa-fw"></i> Statistic </a>
+        <a href="#2" id="historyBar" onclick="historyBarClick(this); return false;"
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i> History </a>
+        <a href="#5" id="settingBar" onclick="settingBarClick(this); return false;"
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>
     </div>
 </nav>
 
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:200px;margin-top:43px;">
-
-    <header class="w3-container" style="padding-top:22px">
-        <h5><b><i class="fa fa-users"></i> Overview</b></h5>
-    </header>
-    <div class="w3-container" id="content">
-        <script>
-            function userBar(sender) {
-                $(document).ready(function () {
-                    $.ajax({
-                        url: "user.html",
-                        cache: false,
-                        success: function (html) {
-                            $("#content").html(html);
-                        }
-                    });
+<div class="w3-main" style="margin-left:200px;margin-top:43px;" id="content">
+    <script>
+        function userBarClick(sender) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: "user.html",
+                    cache: false,
+                    success: function (html) {
+                        $("#content").html(html);
+                    }
                 });
-            }
+            });
+            clearBar();
+            userBar.setAttribute('class', "w3-bar-item w3-button w3-padding w3-blue");
+        }
 
-            function fortuneFlower(sender) {
-                alert('fortune!');
-            }
-        </script>
-    </div>
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-16 w3-light-grey">
-        <p>Powered by Kapi</a></p>
-    </footer>
-    <!-- End page content -->
+        function historyBarClick(sender) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: "history.html",
+                    cache: false,
+                    success: function (html) {
+                        $("#content").html(html);
+                    }
+                });
+            });
+            clearBar();
+            historyBar.setAttribute('class', "w3-bar-item w3-button w3-padding w3-blue");
+        }
+
+        function serverBarClick(sender) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: "server.html",
+                    cache: false,
+                    success: function (html) {
+                        $("#content").html(html);
+                    }
+                });
+            });
+            clearBar();
+            serverBar.setAttribute('class', "w3-bar-item w3-button w3-padding w3-blue");
+        }
+
+        function statBarClick(sender) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: "stat.html",
+                    cache: false,
+                    success: function (html) {
+                        $("#content").html(html);
+                    }
+                });
+            });
+            clearBar();
+            statBar.setAttribute('class', "w3-bar-item w3-button w3-padding w3-blue");
+        }
+
+        function settingBarClick(sender) {
+            $(document).ready(function () {
+                $.ajax({
+                    url: "settings.html",
+                    cache: false,
+                    success: function (html) {
+                        $("#content").html(html);
+                    }
+                });
+            });
+            clearBar();
+            settingBar.setAttribute('class', "w3-bar-item w3-button w3-padding w3-blue");
+        }
+    </script>
 </div>
 </body>
 </html>
