--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         historyBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
         serverBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
         statBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
-        settingBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+//        settingBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
     }
 </script>
 
@@ -40,10 +40,6 @@
     <div id="asdf" class="w3-bar-block">
         <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
            onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i> Close Menu </a>
-        <!--<a href="#1" id="userBar" onclick="userBarClick(this); return false;"-->
-           <!--class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i> User </a>-->
-        <!--<a href="#2" id="serverBar" onclick="serverBarClick(this); return false;"-->
-           <!--class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>-->
         <a href="#1" id="userBar" onclick="barClick(this,1); return false;"
            class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i> User </a>
         <a href="#2" id="serverBar" onclick="barClick(this,2); return false;"
@@ -52,8 +48,8 @@
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-bar-chart fa-fw"></i> Statistic </a>
         <a href="#4" id="historyBar" onclick="barClick(this,4); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i> History </a>
-        <a href="#5" id="settingBar" onclick="barClick(this,5); return false;"
-           class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>
+        <!--<a href="#5" id="settingBar" onclick="barClick(this,5); return false;"-->
+           <!--class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>-->
     </div>
 </nav>
 
@@ -61,6 +57,16 @@
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:200px;margin-top:43px;" id="content">
     <script>
+
+        $(document).ready(function () {
+            $.ajax({
+                url: "user.html",
+                cache: false,
+                success: function (html) {
+                    $("#content").html(html);
+                }
+            });
+        });
 
         function barClick(sender, barID) {
             urlName = "";
