--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-<title>CloudView</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="jquery.js"></script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+    <title>CloudView</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="chart.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <style>
     html, body, h1, h2, h3, h4, h5 {
         font-family: "Raleway", sans-serif
     }
 </style>
+
 
 <body class="w3-light-grey">
 
@@ -49,10 +54,13 @@
         <a href="#4" id="historyBar" onclick="barClick(this,4); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i> History </a>
         <!--<a href="#5" id="settingBar" onclick="barClick(this,5); return false;"-->
-           <!--class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>-->
+        <!--class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>-->
     </div>
 </nav>
 
+<!--Sidebar on small screen-->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
+     title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:200px;margin-top:43px;" id="content">
@@ -71,8 +79,7 @@
         function barClick(sender, barID) {
             urlName = "";
             bar = userBar;
-            switch (barID)
-            {
+            switch (barID) {
                 case 1:
                     urlName = "user.html";
                     bar = userBar;
@@ -110,6 +117,11 @@
         }
 
     </script>
+
+
 </div>
+
+<div id="chart_div"></div>
+
 </body>
 </html>
