--- a/stat.html
+++ b/stat.html
@@ -1,3 +1,4 @@
+<!--suppress JSUnresolvedLibraryURL -->
 <header class="w3-container" style="padding-top:22px">
     <h5><b><i class="fa fa-users"></i> Overview</b></h5>
 </header>
@@ -5,8 +6,76 @@
 <div  class="w3-container" id="user">
     <h2>Statistic</h2>
 </div>
+<hr>
+<!--Usage statistic-->
+<div class="w3-container">
+    <h5>Server monitor</h5>
+    <p>CPU</p>
+    <div class="w3-grey">
+        <div class="w3-container w3-center w3-padding-small w3-green" style="width:36%">36%</div>
+    </div>
+
+    <p>Memory</p>
+    <div class="w3-grey">
+        <div class="w3-container w3-center w3-padding-small w3-orange" style="width:57%">57%</div>
+    </div>
+
+    <p>Disk</p>
+    <div class="w3-grey">
+        <div class="w3-container w3-center w3-padding-small w3-red" style="width:30%">30%</div>
+    </div>
+
+    <p>Network</p>
+    <div class="w3-grey">
+        <div class="w3-container w3-center w3-padding-small w3-yellow" style="width:6%">6%</div>
+    </div>
+</div>
+<hr>
+<!--<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
+<!--<script type="text/javascript">-->
+
+    <!--// Load the Visualization API and the corechart package.-->
+    <!--google.charts.load('current', {'packages':['corechart']});-->
+
+    <!--// Set a callback to run when the Google Visualization API is loaded.-->
+    <!--google.charts.setOnLoadCallback(drawChart);-->
+
+    <!--// Callback that creates and populates a data table,-->
+    <!--// instantiates the pie chart, passes in the data and-->
+    <!--// draws it.-->
+    <!--function drawChart() {-->
+
+        <!--// Create the data table.-->
+        <!--var data = new google.visualization.DataTable();-->
+        <!--data.addColumn('string', 'Topping');-->
+        <!--data.addColumn('number', 'Slices');-->
+        <!--data.addRows([-->
+            <!--['Mushrooms', 3],-->
+            <!--['Onions', 1],-->
+            <!--['Olives', 1],-->
+            <!--['Zucchini', 1],-->
+            <!--['Pepperoni', 2]-->
+        <!--]);-->
+
+        <!--// Set chart options-->
+        <!--var options = {'title':'How Much Pizza I Ate Last Night',-->
+            <!--'width':400,-->
+            <!--'height':300};-->
+
+        <!--// Instantiate and draw our chart, passing in some options.-->
+        <!--var chart = new google.visualization.PieChart(document.getElementById('chart_div'));-->
+        <!--chart.draw(data, options);-->
+    <!--}-->
+<!--</script>-->
+
+<!--<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
+
+
+
+
+
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-light-grey">
-    <p>Powered by Kapi</a></p>
+    <p>Powered by Kapi</p>
 </footer>
 <!-- End page content -->
