--- a/user.html
+++ b/user.html
@@ -2,8 +2,20 @@
     <h5><b><i class="fa fa-users"></i> Overview</b></h5>
 </header>
 <!-- Main info -->
-<div  class="w3-container" id="user">
+<div class="w3-container" id="user">
     <h2>User</h2>
+</div>
+<div class="w3-container" style="max-width:300px;">
+    <label>Login</label>
+    <input class="w3-input w3-margin" type="text">
+    <label>Password</label>
+    <input class="w3-input w3-margin " type="text">
+    <p>
+        <button class="w3-button w3-black w3-round w3-half">log in</button>
+    </p>
+    <p>
+        <button class="w3-button w3-rest w3-black w3-round w3-half">sign up</button>
+    </p>
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-light-grey">
