add monitor and history

--- a/user.html
+++ b/user.html
@@ -11,10 +11,10 @@
     <label>Password</label>
     <input class="w3-input w3-margin " type="text">
     <p>
-        <button class="w3-button w3-black w3-round w3-half">log in</button>
+        <button class="w3-button w3-black w3-round ">log in</button>
     </p>
     <p>
-        <button class="w3-button w3-rest w3-black w3-round w3-half">sign up</button>
+        <button class="w3-button w3-black w3-round ">sign up</button>
     </p>
 </div>
 <!-- Footer -->
