--- a/history.html
+++ b/history.html
@@ -5,6 +5,26 @@
 <div  class="w3-container" id="user">
     <h2>History</h2>
 </div>
+
+<div class="w3-container">
+    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
+        <tr>
+            <th>Time</th>
+            <th>MachineId</th>
+            <th>CPU</th>
+            <th>disk</th>
+            <th>RequestType</th>
+        </tr>
+        <tr>
+            <td>10:00</td>
+            <td>235623</td>
+            <td>intel core i7 7700k</td>
+            <td> Toshiba SSD 2L </td>
+            <td>get</td>
+        </tr>
+    </table>
+</div>
+
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-light-grey">
     <p>Powered by Kapi</a></p>
