--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         historyBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
         serverBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
         statBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
-//        settingBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
+        monitorBar.setAttribute('class', "w3-bar-item w3-button w3-padding");
     }
 </script>
 
@@ -53,8 +53,8 @@
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-bar-chart fa-fw"></i> Statistic </a>
         <a href="#4" id="historyBar" onclick="barClick(this,4); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i> History </a>
-        <!--<a href="#5" id="settingBar" onclick="barClick(this,5); return false;"-->
-        <!--class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Settings</a><br><br>-->
+        <a href="#5" id="monitorBar" onclick="barClick(this,5); return false;"
+        class="w3-bar-item w3-button w3-padding"><i class="fa fa-refresh fa-fw"></i> Monitor</a><br><br>
     </div>
 </nav>
 
@@ -96,8 +96,8 @@
                     bar = historyBar;
                     break;
                 case 5:
-                    urlName = "settings.html";
-                    bar = settingBar;
+                    urlName = "monitor.html";
+                    bar = monitorBar;
                     break;
                 default:
                     break;
