some rework, delete history

--- a/history.html
+++ b/history.html
@@ -1,10 +1,6 @@
 <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-users"></i> Overview</b></h5>
+    <h2><b><i class="fa fa-history"></i> History</b></h2>
 </header>
-<!-- Main info -->
-<div  class="w3-container" id="user">
-    <h2>History</h2>
-</div>
 
 <div class="w3-container">
     <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
@@ -19,14 +15,35 @@
             <td>10:00</td>
             <td>235623</td>
             <td>intel core i7 7700k</td>
-            <td> Toshiba SSD 2L </td>
+            <td> TOSHIBA P300 HDWD110UZSVA  </td>
             <td>get</td>
+        </tr>
+        <tr>
+            <td>11:00</td>
+            <td>235623</td>
+            <td>intel core i7 7700k</td>
+            <td> TOSHIBA P300 HDWD110UZSVA </td>
+            <td>return</td>
+        </tr>
+        <tr>
+            <td>12:00</td>
+            <td>235623</td>
+            <td>intel core i7 7700k</td>
+            <td> TOSHIBA P300 HDWD110UZSVA  </td>
+            <td>get</td>
+        </tr>
+        <tr>
+            <td>13:00</td>
+            <td>235623</td>
+            <td>intel core i7 7700k</td>
+            <td> TOSHIBA P300 HDWD110UZSVA  </td>
+            <td>return</td>
         </tr>
     </table>
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-light-grey">
-    <p>Powered by Kapi</a></p>
-</footer>
+<!--<footer class="w3-container w3-padding-16 w3-light-grey">-->
+    <!--<p>Powered by Kapi</a></p>-->
+<!--</footer>-->
 <!-- End page content -->
