--- a/server.html
+++ b/server.html
@@ -5,7 +5,22 @@
 
 <div class="w3-row">
     <div class="w3-col" style="width:65%">
-        Something
+        <div class="w3-container w3-margin">
+            <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
+                <tr>
+                    <th>MachineId</th>
+                    <th>CPU</th>
+                    <th>disk</th>
+                    <th>location</th>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Intel Core i7 Kaby Lake </td>
+                    <td>Seagate STDR2000200</td>
+                    <td>Europe</td>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <div class="w3-col w3-border w3-margin w3-right" style="width:30%">
@@ -71,9 +86,9 @@
                 </div>
 
                 <div class="w3-container w3-margin ">
-                    <label> Choose manufacturer </label>
+                    <label> Manufacturer </label>
                     <select class="w3-select w3-bordered" name="option">
-                        <option value="" disabled selected>Manufacturer</option>
+                        <option value="" disabled selected>Choose manufacturer</option>
                         <option value="1">Toshiba</option>
                         <option value="2">Samsung</option>
                     </select>
@@ -85,7 +100,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-light-grey">
-    <p>Powered by Kapi</a></p>
-</footer>
+<!--<footer class="w3-container w3-padding-16 w3-light-grey">-->
+    <!--<p>Powered by Kapi</a></p>-->
+<!--</footer>-->
 <!-- End page content -->
