--- a/stat.html
+++ b/stat.html
@@ -1,25 +1,21 @@
 <!--suppress JSUnresolvedLibraryURL -->
 
-<script src="chart.js"></script>
+<script src="scripts/chart.js"></script>
+<script src="scripts/CPUStat.js"></script>
 <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-users"></i> Overview</b></h5>
+    <h2><b><i class="fa fa-bar-chart"></i> Statistic</b></h2>
 </header>
-<!-- Main info -->
-<div  class="w3-container" id="user">
-    <h2>Statistic</h2>
-</div>
 <hr>
 
-<hr>
-
-<div class="w3-container" id="chart_div">
-
+<!--<div class="w3-container" style="width:50%" id="chart_div">-->
+<!--</div>-->
+<div class="w3-container w3-half" id="chart_div">
 </div>
-
-
+<div class="w3-container w3-half" id="CPU_div">
+</div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-light-grey">
-    <p>Powered by Kapi</p>
-</footer>
+<!--<footer class="w3-container w3-padding-16 w3-light-grey">-->
+    <!--<p>Powered by Kapi</p>-->
+<!--</footer>-->
 <!-- End page content -->
