--- a/user.html
+++ b/user.html
@@ -1,10 +1,6 @@
 <header class="w3-container" style="padding-top:22px">
-    <h5><b><i class="fa fa-users"></i> Overview</b></h5>
+    <h2><b><i class="fa fa-users"></i> User</b></h2>
 </header>
-<!-- Main info -->
-<div class="w3-container" id="user">
-    <h2>User</h2>
-</div>
 <div class="w3-container" style="max-width:300px;">
     <label>Login</label>
     <input class="w3-input w3-margin" type="text">
@@ -18,7 +14,7 @@
     </p>
 </div>
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-light-grey">
-    <p>Powered by Kapi</a></p>
-</footer>
+<!--<footer class="w3-container w3-padding-16 w3-light-grey">-->
+    <!--<p>Powered by Kapi</a></p>-->
+<!--</footer>-->
 <!-- End page content -->
